2008-05-02  Jürg Billeter  <j@bitron.ch>

	* vala/valaarraytype.vala:
	* vala/valadatatype.vala:
	* gobject/valaccodegeneratorsignal.vala:

	Fix crash when using arrays in D-Bus services, fixes bug 530455

2008-05-02  Jürg Billeter  <j@bitron.ch>

	* vala/valainitializerlist.vala: implement replace_expression

2008-05-02  Jürg Billeter  <j@bitron.ch>

	* vala/valacatchclause.vala:
	* gobject/valaccodegenerator.vala:

	Fix error handling in catch and finally clauses, fixes bug 530212

2008-05-02  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi: fix g_rand*_int and g_rand*_double bindings,
	patch Ondrej Jirman, fixes bug 530207

2008-05-02  Jürg Billeter  <j@bitron.ch>

	* gobject-introspection/scanner.c: (g_igenerator_add_symbol):

	Do not add duplicate symbols,
	patch by Étienne Bersac, fixes bug 528254

2008-05-01  Jürg Billeter  <j@bitron.ch>

	* doc/vala/types.xml:
	* doc/vala/default.css:
	* doc/vala/xhtml.xsl:

	Extend types section, based on patch by Phil Housley

2008-05-01  Jürg Billeter  <j@bitron.ch>

	* vala/valacfgbuilder.vala:
	* vala/valanullchecker.vala:
	* vala/valasemanticanalyzer.vala:
	* vala/valasymbolresolver.vala:
	* vapigen/valagidlparser.vala:

	Fix crash when using errordomain methods,
	based on patch by Phil Housley, fixes bug 530537

2008-04-28  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gdk-2.0/: fix GdkEvent* bindings

	* vapi/gdk-2.0.vapi, vapi/gtk+-2.0.vapi: regenerated

2008-04-28  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/libsexy/: fix sexy_icon_entry_set_icon binding,
	patch by Evan Nemerson

	* vapi/libsexy.vapi: regenerated

2008-04-28  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gtk+-2.0/: fix gtk_box_query_child_packing binding,
	patch by Evan Nemerson

	* vapi/gtk+-2.0.vapi: regenerated

2008-04-27  Jürg Billeter  <j@bitron.ch>

	* vala/valadatatype.vala:

	Fix generic type arguments in to_string()

2008-04-26  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodegenerator.vala:
